integration/__fixtures__/type-error/src/index.ts
const str: string = 46;
console.log(str);
